--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -28,8 +28,9 @@ jobs:
       REPO_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
       additional-env-vars: |
-        CMDSTAN=~/.cmdstan
-        CMDSTAN_PATH=~/.cmdstan
+        # This is where STAN is on the Docker image
+        CMDSTAN=/root/.cmdstan
+        CMDSTAN_PATH=/root/.cmdstan
   coverage:
     name: Coverage 📔 
     uses: insightsengineering/r.pkg.template/.github/workflows/test-coverage.yaml@main
