Vignette for the BYOD analysis + placeholder for other vignettes (#97)
* wip

* wip custom dataset

* updates to vignettes

* draft vignettes and vignette placeholders

* remove URL

* rename vignettes

* add ylim to prior distribution vignette

* misc fixes

- fix rename_draws_covariates() in vignettes
- added options to Rmds to pass checks

* change `install_cmdstanr()` to fix GHA

* revert

* set_cmdstan_path()

* assume `cmdstanr` always installed

* hardcode cmdstanr path

* Set STAN paths

* small changes

* remove "custom"

* misc updates

Co-authored-by: gravesti <83659704+gravesti@users.noreply.github.com>
Co-authored-by: cicdguy <26552821+cicdguy@users.noreply.github.com>
Co-authored-by: gravesti <isaac.gravestock@roche.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,10 @@ Suggests:
     usethis (>= 2.1.5),
     vdiffr,
     tibble,
-    xml2
+    xml2,
+    knitr,
+    rmarkdown,
+    bayesplot
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
@@ -92,3 +95,4 @@ Collate:
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
 LazyData: true
+VignetteBuilder: knitr
