--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
 export(rename_draws_covariates)
+export(sim_samplesize)
 export(treatment_details)
 export(uniform_prior)
 export(variable_dictionary)
