--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -90,6 +90,7 @@ Collate:
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
+    'sim_samplesize.R'
     'treatment_details.R'
     'trim_data_matrix.R'
     'uniform_prior.R'
