`bin_var()` and `cont_var()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(add_covariates)
 export(bernoulli_prior)
 export(beta_prior)
+export(bin_var)
 export(borrowing_details)
 export(cauchy_prior)
 export(check_cmdstanr)
 export(check_data_matrix_has_columns)
+export(cont_var)
 export(create_analysis_obj)
 export(create_data_matrix)
 export(exp_surv_dist)
