--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -90,7 +90,9 @@ Collate:
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
+    'sim_covariates.R'
     'sim_samplesize.R'
+    'simvar_class.R'
     'treatment_details.R'
     'trim_data_matrix.R'
     'uniform_prior.R'
