--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Suggests:
     xml2,
     knitr,
     rmarkdown,
-    bayesplot
+    bayesplot,
+    matrixcalc
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
