--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(add_covariates)
 export(bernoulli_prior)
 export(beta_prior)
+export(bin_var)
 export(borrowing_details)
 export(cauchy_prior)
 export(check_cmdstanr)
 export(check_data_matrix_has_columns)
+export(cont_var)
 export(create_analysis_obj)
 export(create_data_matrix)
 export(exp_surv_dist)
@@ -21,6 +23,7 @@ export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
 export(rename_draws_covariates)
+export(sim_covariates)
 export(sim_samplesize)
 export(treatment_details)
 export(uniform_prior)
