--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,6 +76,12 @@ Collate:
     'cmdstan.R'
     'create_analysis_obj.R'
     'create_data_matrix.R'
+    'sim_trt_list.R'
+    'sim_cov_list.R'
+    'sim_outcome_list.R'
+    'sim_borrowing_list.R'
+    'sim_data_list.R'
+    'create_simulation_obj.R'
     'data.R'
     'exp_surv_dist.R'
     'exponential_prior.R'
