Add sim_data_list() (#130)
Adds sim_data_list() and update simulation vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,7 +53,8 @@ Suggests:
     knitr,
     rmarkdown,
     bayesplot,
-    matrixcalc
+    matrixcalc,
+    simsurv
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
@@ -92,6 +93,7 @@ Collate:
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
     'sim_covariates.R'
+    'sim_data_list.R'
     'sim_samplesize.R'
     'simvar_class.R'
     'treatment_details.R'
