--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(plot_pmf)
 export(poisson_prior)
 export(rename_draws_covariates)
 export(sim_covariates)
+export(sim_data_list)
 export(sim_samplesize)
 export(treatment_details)
 export(uniform_prior)
