--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(poisson_prior)
 export(rename_draws_covariates)
 export(sim_covariates)
 export(sim_data_list)
+export(sim_outcome_list)
 export(sim_samplesize)
 export(treatment_details)
 export(uniform_prior)
