--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,6 +92,8 @@ Collate:
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
+    '\'
+    'sim_covariate_list.R'
     'sim_covariates.R'
     'sim_data_list.R'
     'sim_samplesize.R'
