--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
 export(rename_draws_covariates)
+export(sim_covariate_list)
 export(sim_covariates)
 export(sim_data_list)
 export(sim_samplesize)
