wip switching containers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(rename_draws_covariates)
 export(sim_covariates)
 export(sim_data_list)
 export(sim_samplesize)
+export(sim_treatment_list)
 export(treatment_details)
 export(uniform_prior)
 export(variable_dictionary)
