--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -95,8 +95,9 @@ Collate:
     'sim_covariates.R'
     'sim_data_list.R'
     'sim_samplesize.R'
-    'simvar_class.R'
     'treatment_details.R'
+    'sim_treatment_list.R'
+    'simvar_class.R'
     'trim_data_matrix.R'
     'uniform_prior.R'
     'weib_ph_surv_dist.R'
