132 `sim_outcome_list()` (#136)
* sim_outcome_list

* cleanup

* class family

* [skip actions] Roxygen Man Pages Auto Update

Co-authored-by: 27856297+dependabot-preview[bot]@users.noreply.github.com <27856297+dependabot-preview[bot]@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(rename_draws_covariates)
 export(sim_borrowing_list)
 export(sim_covariates)
 export(sim_data_list)
+export(sim_outcome_list)
 export(sim_samplesize)
 export(treatment_details)
 export(uniform_prior)
