134 `sim_cov_list()` (#137)
* wip moving containers

* sim_covariate_list

* class family

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(plot_pmf)
 export(poisson_prior)
 export(rename_draws_covariates)
 export(sim_borrowing_list)
+export(sim_covariate_list)
 export(sim_covariates)
 export(sim_data_list)
 export(sim_outcome_list)
