--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -93,6 +93,7 @@ Collate:
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
     'sim_borrowing_list.R'
+    'sim_covariate_list.R'
     'sim_covariates.R'
     'sim_data_list.R'
     'weib_ph_surv_dist.R'
