135 `sim_treatment_list()` (#139)
* wip switching containers

* class family and pre-commit checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(sim_covariates)
 export(sim_data_list)
 export(sim_outcome_list)
 export(sim_samplesize)
+export(sim_treatment_list)
 export(treatment_details)
 export(uniform_prior)
 export(variable_dictionary)
