--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -99,8 +99,9 @@ Collate:
     'weib_ph_surv_dist.R'
     'sim_outcome_list.R'
     'sim_samplesize.R'
-    'simvar_class.R'
     'treatment_details.R'
+    'sim_treatment_list.R'
+    'simvar_class.R'
     'trim_data_matrix.R'
     'uniform_prior.R'
 LazyData: true
