--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(check_data_matrix_has_columns)
 export(cont_var)
 export(create_analysis_obj)
 export(create_data_matrix)
+export(create_simulation_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
