--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,12 +77,21 @@ Collate:
     'cmdstan.R'
     'create_analysis_obj.R'
     'create_data_matrix.R'
-    'data.R'
-    'exp_surv_dist.R'
+    'treatment_details.R'
+    'sim_treatment_list.R'
+    'logistic_bin_outcome.R'
     'exponential_prior.R'
+    'weib_ph_surv_dist.R'
+    'exp_surv_dist.R'
+    'sim_outcome_list.R'
+    'sim_borrowing_list.R'
+    'sim_covariate_list.R'
+    'sim_data_list.R'
+    'simulation_class.R'
+    'create_simulation_obj.R'
+    'data.R'
     'gamma_prior.R'
     'helpers.R'
-    'logistic_bin_outcome.R'
     'make_model_string_data.R'
     'make_model_string_functions.R'
     'make_model_string_model.R'
@@ -92,15 +101,8 @@ Collate:
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
-    'sim_borrowing_list.R'
-    'sim_covariate_list.R'
     'sim_covariates.R'
-    'sim_data_list.R'
-    'weib_ph_surv_dist.R'
-    'sim_outcome_list.R'
     'sim_samplesize.R'
-    'treatment_details.R'
-    'sim_treatment_list.R'
     'simvar_class.R'
     'trim_data_matrix.R'
     'uniform_prior.R'
