--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ export(variable_dictionary)
 export(weib_ph_surv_dist)
 exportMethods(mcmc_sample)
 import(checkmate)
-import(cmdstanr)
+importClassesFrom(cmdstanr,CmdStanModel)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
 importFrom(graphics,par)
