add some suggests packages for vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,7 +54,9 @@ Suggests:
     rmarkdown,
     bayesplot,
     matrixcalc,
-    simsurv
+    simsurv,
+    PSweight,
+    MatchIt
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
