working `create_simulation_obj()` with udpated vignettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
 export(rename_draws_covariates)
+export(show_guide)
 export(sim_borrowing_list)
 export(sim_covariate_list)
 export(sim_covariates)
