140 `create_simulation_obj()` (#144)
* wip

* wip

* create_simulation_obj() first draft

* replace `seq_len` with `seq_along`

* update `get_vars`, allow users to specify single object as opposed to list

* working `create_simulation_obj()` with new test cases

* WIP, updating names

* working `create_simulation_obj()` with udpated vignettes

* fix checks

* fix integer test

* fix show_guide docs

* simplify and use quiet

* typo

`covaraite` to `covariate`. Double checked wordlist

Co-authored-by: gravesti <isaac.gravestock@roche.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(check_data_matrix_has_columns)
 export(cont_var)
 export(create_analysis_obj)
 export(create_data_matrix)
+export(create_simulation_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
@@ -23,6 +24,7 @@ export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
 export(rename_draws_covariates)
+export(show_guide)
 export(sim_borrowing_list)
 export(sim_covariate_list)
 export(sim_covariates)
