--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -101,6 +101,7 @@ Collate:
     'make_model_string_parameters.R'
     'make_model_string_transf_params.R'
     'mcmc_sample.R'
+    'mcmc_simulation_result.R'
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
