export `draws` to export `CmdStanModel` objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(create_simulation_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
-export(get_draws)
+export(get_cmd_stan_models)
 export(get_results)
 export(get_vars)
 export(logistic_bin_outcome)
