--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -106,7 +106,8 @@ Collate:
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
     'sim_covariates.R'
-    'sim_is_covered.R'
+    'sim_is_null_effect_covered.R'
+    'sim_is_true_effect_covered.R'
     'sim_samplesize.R'
     'simvar_class.R'
     'trim_data_matrix.R'
