--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -106,6 +106,8 @@ Collate:
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
     'sim_covariates.R'
+    'sim_estimate_bias.R'
+    'sim_estimate_mse.R'
     'sim_is_null_effect_covered.R'
     'sim_is_true_effect_covered.R'
     'sim_samplesize.R'
