first tutorial bits

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Imports:
     glue,
     methods,
     graphics,
-    posterior
+    posterior,
+    learnr
 Suggests:
     survival,
     flexsurv,
