--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(create_simulation_obj)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
+export(get_cmd_stan_models)
+export(get_results)
 export(get_vars)
 export(logistic_bin_outcome)
 export(mcmc_sample)
