--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: improved-waffle-bf365a9a.pages.github.io #https://genentech.github.io/psborrow2
+url: https://genentech.github.io/psborrow2
 
 template:
   bootstrap: 5
