--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -102,7 +102,6 @@ Collate:
     'make_model_string_transf_params.R'
     'mcmc_sample.R'
     'mcmc_simulation_result.R'
-    'onload.R'
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
@@ -115,5 +114,6 @@ Collate:
     'simvar_class.R'
     'trim_data_matrix.R'
     'uniform_prior.R'
+    'zzz.R'
 LazyData: true
 VignetteBuilder: knitr
