add packages to suggest

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,8 +55,9 @@ Suggests:
     bayesplot,
     matrixcalc,
     simsurv,
-    PSweight,
-    MatchIt
+    WeighIt,
+    MatchIt,
+    BayesPPD
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
