fixes for cmd check

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,7 +58,9 @@ Suggests:
     WeightIt,
     MatchIt,
     BayesPPD,
-    gbm
+    gbm,
+    ggplot2,
+    cobalt
 Remotes:
    github::stan-dev/cmdstanr@v0.5.2
 Language: en-US
