Add weights to models (#161)
* proof of concept

* wip

* update weighting vignette

* update and add tests

* update propensity scores vignette

* add packages to suggest

* typo in suggests

* add gbm

* fixes for cmd check

* [skip actions] Restyle files

* move weight_string to outcome objects

* tidy up

* merge main

* add coauthor

Co-authored-by: github-actions <41898282+github-actions[bot]@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,8 +55,12 @@ Suggests:
     bayesplot,
     matrixcalc,
     simsurv,
-    PSweight,
+    WeightIt,
     MatchIt,
+    BayesPPD,
+    gbm,
+    ggplot2,
+    cobalt,
     table1,
     gt,
     gtsummary
