--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,4 +81,4 @@ repos:
     rev: v0.32.2
     hooks:
       - id: markdownlint
-        args: ["--ignore=tests/testthat/_snaps/*"]
+        args: ["--ignore=tests/testthat/_snaps/*", "--disable=MD033"]
