pre-commit spelling update

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,7 +40,8 @@ repos:
           .*\.Rds|
           .*\.sh|
           .*\.svg|
-          .*\.RData
+          .*\.RData|
+          man/figures/.*
           )$
       - id: lintr
       - id: readme-rmd-rendered
