speed up without check cmdstan versions

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -45,3 +45,4 @@ jobs:
       additional-env-vars: |
         CMDSTAN=/root/.cmdstan
         CMDSTAN_PATH=/root/.cmdstan
+        CMDSTANR_NO_VER_CHECK=true
