--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,7 @@ jobs:
       additional-env-vars: |
         CMDSTAN=/root/.cmdstan
         CMDSTAN_PATH=/root/.cmdstan
+        CMDSTANR_NO_VER_CHECK=true
   docs:
     name: Pkgdown Docs 📚
     needs: release
@@ -30,6 +31,7 @@ jobs:
       additional-env-vars: |
         CMDSTAN=/root/.cmdstan
         CMDSTAN_PATH=/root/.cmdstan
+        CMDSTANR_NO_VER_CHECK=true
   release:
     name: Create release 🎉
     uses: insightsengineering/r.pkg.template/.github/workflows/release.yaml@main
