--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
+Type: Package
 Package: psborrow2
-Title: Bayesian Dynamic Borrowing Simulation Study and Analysis
+Title: An R Package for Bayesian Dynamic Borrowing Simulation Study and Analysis
 Version: 0.0.2.0
 Authors@R: c(
    person(
@@ -21,12 +22,12 @@ Authors@R: c(
       email = "craig.gower-page@roche.com"
       )
    )
-Description: An R package for complex, innovative trial designs using
-   Bayesian dynamic borrowing (BDB). 'psborrow' has two main goals:
-   First, facilitate simulation studies that compare different borrowing
+Description: `psborrow2` is an R package for complex, innovative trial designs using
+   Bayesian dynamic borrowing (BDB). `psborrow` has two main goals:
+   First, `psborrow2` facilitates simulation studies that compare different borrowing
    parameters (e.g. full borrowing, no borrowing, dynamic borrowing) and
    other trial and borrowing characteristics (e.g. sample size, covariates) in
-   a unified way; and second, provide a user-friendly interface for applying BDB
+   a unified way; and second, `psborrow2` provides a user-friendly interface for applying BDB
    on the study results handles the MCMC sampling on behalf of the user.
 License: Apache License (>= 2)
 Encoding: UTF-8
