wip first pass half-cauchy

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -102,6 +102,7 @@ Collate:
     'create_simulation_obj.R'
     'data.R'
     'gamma_prior.R'
+    'half_cauchy_prior.R'
     'make_analysis_object_list.R'
     'make_model_string_data.R'
     'make_model_string_functions.R'
