--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(gamma_prior)
 export(get_cmd_stan_models)
 export(get_results)
 export(get_vars)
+export(half_cauchy_prior)
 export(logistic_bin_outcome)
 export(mcmc_sample)
 export(normal_prior)
