--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cont_var)
 export(create_analysis_obj)
 export(create_data_matrix)
 export(create_simulation_obj)
+export(eval_constraints)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
