--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(get_cmd_stan_models)
 export(get_results)
 export(get_vars)
 export(half_cauchy_prior)
+export(half_normal_prior)
 export(logistic_bin_outcome)
 export(mcmc_sample)
 export(normal_prior)
