Half-cauchy distribution (#212)
* wip first pass half-cauchy

* wip need to go bakc and come back later

* wip half cauchy stash

* wip updated model string params

* wip apperas to pass R CMD check

* [skip actions] Restyle files

* added half cauchy to a test

* half normal

* [skip actions] Restyle files

---------

Co-authored-by: github-actions <41898282+github-actions[bot]@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,15 @@ export(cont_var)
 export(create_analysis_obj)
 export(create_data_matrix)
 export(create_simulation_obj)
+export(eval_constraints)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
 export(get_cmd_stan_models)
 export(get_results)
 export(get_vars)
+export(half_cauchy_prior)
+export(half_normal_prior)
 export(logistic_bin_outcome)
 export(mcmc_sample)
 export(normal_prior)
