--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,19 +4,24 @@ export(add_covariates)
 export(bernoulli_prior)
 export(beta_prior)
 export(bin_var)
+export(binary_cutoff)
 export(borrowing_details)
 export(cauchy_prior)
 export(check_cmdstanr)
 export(check_data_matrix_has_columns)
 export(cont_var)
+export(covariance_matrix)
 export(create_analysis_obj)
+export(create_baseline_object)
 export(create_data_matrix)
 export(create_simulation_obj)
 export(eval_constraints)
 export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
+export(generate)
 export(get_cmd_stan_models)
+export(get_quantiles)
 export(get_results)
 export(get_vars)
 export(half_cauchy_prior)
@@ -44,6 +49,8 @@ export(weib_ph_surv_dist)
 exportMethods(mcmc_sample)
 import(checkmate)
 import(cmdstanr)
+importFrom(Matrix,nearPD)
+importFrom(generics,generate)
 importFrom(graphics,axis)
 importFrom(graphics,lines)
 importFrom(graphics,par)
