--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Imports:
     graphics,
     posterior,
     generics,
-    Matrix
+    Matrix,
+    mvtnorm
 Suggests:
     survival,
     flexsurv,
