--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,11 +3,14 @@
 # R specific hooks: https://github.com/lorenzwalthert/precommit
 repos:
   - repo: https://github.com/lorenzwalthert/precommit
-    rev: v0.3.2.9007
+    rev: v0.3.2.9019
     hooks:
       - id: style-files
         args: []
-      - id: roxygenize
+      # - id: roxygenize
+      #   additional_dependencies:
+      #     - knitr
+      #     - cmdstanr
       # codemeta must be above use-tidy-description when both are used
       # -   id: codemeta-description-updated
       - id: use-tidy-description
@@ -47,7 +50,7 @@ repos:
       - id: no-browser-statement
       - id: deps-in-desc
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode
+    rev: v3.0.1
     hooks:
       - id: prettier
   - repo: https://github.com/pre-commit/pre-commit-hooks
