--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(treatment_details)
 export(uniform_prior)
 export(variable_dictionary)
 export(weib_ph_surv_dist)
+exportMethods(generate)
 exportMethods(mcmc_sample)
 import(checkmate)
 import(cmdstanr)
