--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -23,5 +23,5 @@ devel
 ^Meta$
 ^dev$
 ^\.pre-commit-config\.yaml$
-^vingettes/original$
-^vingettes/Makefile$
+^vignettes/original$
+vignettes/Makefile
