--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,7 +42,10 @@ Imports:
     glue,
     methods,
     graphics,
-    posterior
+    posterior,
+    generics,
+    Matrix,
+    mvtnorm
 Suggests:
     survival,
     flexsurv,
@@ -121,6 +124,7 @@ Collate:
     'sim_is_null_effect_covered.R'
     'sim_is_true_effect_covered.R'
     'sim_samplesize.R'
+    'simulate_data.R'
     'simvar_class.R'
     'trim_data_matrix.R'
     'uniform_prior.R'
