remove internal Rds and check stan before examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(bin_var)
 export(binary_cutoff)
 export(borrowing_details)
 export(cauchy_prior)
+export(check_cmdstan)
 export(check_cmdstanr)
 export(check_data_matrix_has_columns)
 export(cont_var)
