--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -93,10 +93,10 @@ Collate:
     'treatment_details.R'
     'sim_treatment_list.R'
     'helpers.R'
-    'logistic_bin_outcome.R'
+    'outcome_bin_logistic.R'
     'exponential_prior.R'
-    'weib_ph_surv_dist.R'
-    'exp_surv_dist.R'
+    'outcome_surv_weibull_ph.R'
+    'outcome_surv_exponential.R'
     'sim_outcome_list.R'
     'sim_borrowing_list.R'
     'sim_covariate_list.R'
