wip updating output objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(create_baseline_object)
 export(create_data_matrix)
 export(create_simulation_obj)
 export(eval_constraints)
+export(exp_surv_dist)
 export(exponential_prior)
 export(gamma_prior)
 export(generate)
@@ -26,6 +27,7 @@ export(get_results)
 export(get_vars)
 export(half_cauchy_prior)
 export(half_normal_prior)
+export(logistic_bin_outcome)
 export(mcmc_sample)
 export(normal_prior)
 export(outcome_bin_logistic)
@@ -47,6 +49,7 @@ export(sim_treatment_list)
 export(treatment_details)
 export(uniform_prior)
 export(variable_dictionary)
+export(weib_ph_surv_dist)
 exportMethods(generate)
 exportMethods(mcmc_sample)
 import(checkmate)
