--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -8,5 +8,7 @@ on:
 
 name: R-CMD-check
 
-steps:
-  - run: echo "Running on ${{ matrix.config.os }}"
+jobs:
+  R-CMD-check:
+    steps:
+      - run: echo "Running on ${{ matrix.config.os }}"
