--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -10,5 +10,6 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Running on ${{ matrix.config.os }}"
