--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -14,6 +14,7 @@ jobs:
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
     steps:
       - run: echo "Running on ${{ matrix.config.os }}"
+      - run: echo "GitHub token ${{ secrets.GITHUB_TOKEN }}"
     strategy:
       fail-fast: false
       matrix:
