--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -51,5 +51,7 @@ jobs:
       - name: Install other misc development packages
         run: | 
           Rscript -e "options(warn=2); install.packages(c('survival','ggsurvfit','simsurv','flexsurv','bayesplot','posterior','table1','broom','ggplot2','gt','gtsummary','dplyr','tidyselect','WeightIt','cobalt','MatchIt','BayesPPD'))"
-      
+      - name: test-ggsurvfit
+        run: |
+          Rscript -e "library(ggsurvfit)" 
       - uses: r-lib/actions/check-r-package@v2
