--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -42,6 +42,10 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
+        if: runner.os == 'Windows'
+        run: |
+          choco install -y rtools
+          echo  "Windows here"
 
       - name: Install and unpack cmdstanr 
         run: |
