--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -37,16 +37,11 @@ jobs:
         with:
           extra-packages: rcmdcheck
 
-      - name: Install system dependencies Linux
+      - name: Install system dependencies
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
-     - name: Install system dependencies Windows
-        if: runner.os == 'Windows'
-        run: |
-          choco install -y rtools
-          echo  "Windows here"
 
       - name: Install and unpack cmdstanr 
         run: |
