--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -37,11 +37,16 @@ jobs:
         with:
           extra-packages: rcmdcheck
 
-      - name: Install system dependencies
+      - name: Install system dependencies on Linux
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
+
+      - name: Install system dependencies on Windows
+        if: runner.os == 'Windows'
+        run: |
+          choco install -y rtools
 
       - name: Install and unpack cmdstanr 
         run: |
