--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -43,14 +43,10 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
 
-      - name: Install system dependencies on Windows
-        if: runner.os == 'Windows'
-        run: |
-          choco install -y rtools
-
       - name: Install and unpack cmdstanr 
         run: |
           Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption('repos')))"
           Rscript -e "cmdstanr::install_cmdstan()"
+          Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
 
       - uses: r-lib/actions/check-r-package@v2
