--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -26,6 +26,12 @@ jobs:
           extra-packages: any::covr
           needs: coverage
 
+      - name: Install and unpack cmdstanr 
+        run: |
+          Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption('repos')))"
+          Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
+          Rscript -e "cmdstanr::install_cmdstan()"
+          
       - name: Test coverage
         run: covr::codecov(quiet = FALSE)
         shell: Rscript {0}
