--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ exportMethods(generate)
 exportMethods(mcmc_sample)
 import(checkmate)
 import(cmdstanr)
+import(future)
 importFrom(Matrix,nearPD)
 importFrom(generics,generate)
 importFrom(graphics,axis)
