addnl make directives

--- a/vignettes/Makefile
+++ b/vignettes/Makefile
@@ -3,5 +3,9 @@ OBJS = $(patsubst original/_%, %, $(SRCS))
 
 build: $(OBJS)
 
+clean: 
+	rm -f $(OBJS)
+	rm -rf figure-*
+
 %.Rmd: original/_%.Rmd
 	Rscript -e "knitr::opts_chunk[['set']]('fig.path' = 'figure-$*-'); knitr::knit('original/_$*.Rmd', output = '$*.Rmd')"
