add make direcives back in

--- a/vignettes/Makefile
+++ b/vignettes/Makefile
@@ -5,3 +5,10 @@ build: $(OBJS)
 
 %.Rmd: original/_%.Rmd
 	Rscript -e "knitr::opts_chunk[['set']]('fig.path' = 'figure-$*-'); knitr::knit('original/_$*.Rmd', output = '$*.Rmd')"
+
+.clean: 
+	rm -f $(OBJS)
+	rm -rf figure-*
+
+.PHONY: rebuild
+rebuild: .clean build
