--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,8 @@ repos:
           .*\.sh|
           .*\.svg|
           .*\.RData|
-          man/figures/.*
+          man/figures/.*|
+          .*\.png
           )$
       - id: lintr
       - id: readme-rmd-rendered
