clean up and fix prior classes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -83,8 +83,6 @@ Collate:
     'borrowing_class.R'
     'outcome_class.R'
     'analysis_class.R'
-    'bernoulli_prior.R'
-    'beta_prior.R'
     'borrowing_details.R'
     'cauchy_prior.R'
     'check_data_matrix_has_columns.R'
@@ -106,7 +104,6 @@ Collate:
     'create_simulation_obj.R'
     'data.R'
     'gamma_prior.R'
-    'half_cauchy_prior.R'
     'half_normal_prior.R'
     'make_analysis_object_list.R'
     'make_model_string_data.R'
@@ -119,6 +116,9 @@ Collate:
     'package.R'
     'poisson_prior.R'
     'prepare_stan_data_inputs.R'
+    'prior_bernoulli.R'
+    'prior_beta.R'
+    'prior_half_cauchy.R'
     'sim_covariates.R'
     'sim_estimate_bias.R'
     'sim_estimate_effect_variance.R'
