--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,9 @@ export(plot)
 export(plot_pdf)
 export(plot_pmf)
 export(poisson_prior)
+export(prior_bernoulli)
+export(prior_beta)
+export(prior_half_cauchy)
 export(rename_draws_covariates)
 export(show_guide)
 export(sim_borrowing_list)
