wip prior renaming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(plot_pmf)
 export(poisson_prior)
 export(prior_bernoulli)
 export(prior_beta)
+export(prior_cauchy)
 export(prior_half_cauchy)
 export(rename_draws_covariates)
 export(show_guide)
