--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -84,7 +84,6 @@ Collate:
     'outcome_class.R'
     'analysis_class.R'
     'borrowing_details.R'
-    'cauchy_prior.R'
     'check_data_matrix_has_columns.R'
     'cmdstan.R'
     'create_analysis_obj.R'
@@ -118,6 +117,7 @@ Collate:
     'prepare_stan_data_inputs.R'
     'prior_bernoulli.R'
     'prior_beta.R'
+    'prior_cauchy.R'
     'prior_half_cauchy.R'
     'sim_covariates.R'
     'sim_estimate_bias.R'
