--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(poisson_prior)
 export(prior_bernoulli)
 export(prior_beta)
 export(prior_cauchy)
+export(prior_exponential)
 export(prior_half_cauchy)
 export(rename_draws_covariates)
 export(show_guide)
