--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,7 +92,7 @@ Collate:
     'sim_treatment_list.R'
     'helpers.R'
     'outcome_bin_logistic.R'
-    'exponential_prior.R'
+    'prior_exponential.R'
     'outcome_surv_weibull_ph.R'
     'outcome_surv_exponential.R'
     'sim_outcome_list.R'
