--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -103,7 +103,6 @@ Collate:
     'create_simulation_obj.R'
     'data.R'
     'gamma_prior.R'
-    'half_normal_prior.R'
     'make_analysis_object_list.R'
     'make_model_string_data.R'
     'make_model_string_functions.R'
@@ -119,6 +118,7 @@ Collate:
     'prior_beta.R'
     'prior_cauchy.R'
     'prior_half_cauchy.R'
+    'prior_half_normal.R'
     'sim_covariates.R'
     'sim_estimate_bias.R'
     'sim_estimate_effect_variance.R'
