--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,9 +27,9 @@ export(get_quantiles)
 export(get_results)
 export(get_vars)
 export(half_cauchy_prior)
-export(half_prior_normal)
 export(logistic_bin_outcome)
 export(mcmc_sample)
+export(normal_half_prior)
 export(normal_prior)
 export(outcome_bin_logistic)
 export(outcome_surv_exponential)
@@ -43,6 +43,7 @@ export(prior_beta)
 export(prior_cauchy)
 export(prior_exponential)
 export(prior_half_cauchy)
+export(prior_half_normal)
 export(prior_normal)
 export(rename_draws_covariates)
 export(show_guide)
