--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -102,7 +102,6 @@ Collate:
     'simulation_class.R'
     'create_simulation_obj.R'
     'data.R'
-    'gamma_prior.R'
     'make_analysis_object_list.R'
     'make_model_string_data.R'
     'make_model_string_functions.R'
@@ -117,6 +116,7 @@ Collate:
     'prior_bernoulli.R'
     'prior_beta.R'
     'prior_cauchy.R'
+    'prior_gamma.R'
     'prior_half_cauchy.R'
     'prior_half_normal.R'
     'sim_covariates.R'
