--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(prior_bernoulli)
 export(prior_beta)
 export(prior_cauchy)
 export(prior_exponential)
+export(prior_gamma)
 export(prior_half_cauchy)
 export(prior_half_normal)
 export(prior_normal)
