--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -111,7 +111,6 @@ Collate:
     'mcmc_sample.R'
     'mcmc_simulation_result.R'
     'package.R'
-    'poisson_prior.R'
     'prepare_stan_data_inputs.R'
     'prior_bernoulli.R'
     'prior_beta.R'
@@ -119,6 +118,7 @@ Collate:
     'prior_gamma.R'
     'prior_half_cauchy.R'
     'prior_half_normal.R'
+    'prior_poisson.R'
     'sim_covariates.R'
     'sim_estimate_bias.R'
     'sim_estimate_effect_variance.R'
