--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(prior_gamma)
 export(prior_half_cauchy)
 export(prior_half_normal)
 export(prior_normal)
+export(prior_poisson)
 export(rename_draws_covariates)
 export(show_guide)
 export(sim_borrowing_list)
