fix small errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,9 +27,9 @@ export(get_quantiles)
 export(get_results)
 export(get_vars)
 export(half_cauchy_prior)
+export(half_normal_prior)
 export(logistic_bin_outcome)
 export(mcmc_sample)
-export(normal_half_prior)
 export(normal_prior)
 export(outcome_bin_logistic)
 export(outcome_surv_exponential)
