--- a/vignettes/Makefile
+++ b/vignettes/Makefile
@@ -12,3 +12,7 @@ build: $(OBJS)
 
 .PHONY: rebuild
 rebuild: .clean build
+
+.PHONY: install
+install: 
+	Rscript -e "devtools::build('../') |> install.packages(repos = NULL, build_vignettes = FALSE)"
