--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,3 +81,4 @@ importFrom(stats,formula)
 importFrom(stats,model.matrix)
 importFrom(stats,pnorm)
 importFrom(stats,setNames)
+importFrom(utils,packageVersion)
