parallelisation with `future` (#240)
* proof of concept of `future`

* add example

* proof of concept of `future`

* add example

* fix and add test

* compile model if exe doesn't exist

* put compile in the future

* update simulation study rmd

---------

Co-authored-by: Matt Secrest <secrestm@gene.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ exportMethods(generate)
 exportMethods(mcmc_sample)
 import(checkmate)
 import(cmdstanr)
+import(future)
 importFrom(Matrix,nearPD)
 importFrom(generics,generate)
 importFrom(graphics,axis)
