fix check_cmdstanr error (#246)
* improve printing. No errors

* add import

---------

Co-authored-by: Matt Secrest <secrestm@gene.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,3 +82,4 @@ importFrom(stats,formula)
 importFrom(stats,model.matrix)
 importFrom(stats,pnorm)
 importFrom(stats,setNames)
+importFrom(utils,packageVersion)
