rever and try extra-packages

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -28,16 +28,15 @@ jobs:
         with:
           use-public-rspm: true
 
-      - name: Install and unpack cmdstanr 
-        run: |
-          Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption('repos')))"
-          Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
-          Rscript -e "cmdstanr::install_cmdstan()"
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::.
+          extra-packages: any::pkgdown, local::., cmdstanr
           needs: website
+
+      - name: Install and unpack cmdstanr 
+        run: |
+          Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
+          Rscript -e "cmdstanr::install_cmdstan()"
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = TRUE, install = TRUE)
