--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -21,17 +21,16 @@ jobs:
         with:
           use-public-rspm: true
 
-     - name: Install and unpack cmdstanr 
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::covr, cmdstanr
+          needs: coverage
+
+      - name: Install and unpack cmdstanr 
         run: |
-          Rscript -e "install.packages('cmdstanr', repos = c('https://mc-stan.org/r-packages/', getOption('repos')))"
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
           Rscript -e "cmdstanr::install_cmdstan()"
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::covr
-          needs: coverage
- 
       - name: Test coverage
         run: covr::codecov(quiet = FALSE)
         shell: Rscript {0}
