--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: rcmdcheck, cmdstanr
+          extra-packages: rcmdcheck, github::stan-dev/cmdstanr
 
       - name: Install system dependencies on Linux
         if: runner.os == 'Linux'
@@ -43,7 +43,7 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y texlive-fonts-extra
 
-      - name: Install and unpack cmdstanr 
+      - name: Install and unpack cmdstan
         run: |
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
           Rscript -e "cmdstanr::install_cmdstan()"
