--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -30,10 +30,10 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::., cmdstanr
+          extra-packages: any::pkgdown, local::., github::stan-dev/cmdstanr
           needs: website
 
-      - name: Install and unpack cmdstanr 
+      - name: Install and unpack cmdstan 
         run: |
           Rscript -e "cmdstanr::check_cmdstan_toolchain(fix = TRUE)"
           Rscript -e "cmdstanr::install_cmdstan()"
