--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr, github::stan-dev/cmdstanr
+          extra-packages: any::covr, github::stan-dev/cmdstanr@v0.5.2
           needs: coverage
 
       - name: Install and unpack cmdstan
