--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::., github::stan-dev/cmdstanr@v0.5.2
+          extra-packages: any::pkgdown, local::., github::stan-dev/cmdstanr
           needs: website
 
       - name: Install and unpack cmdstan 
